--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -16,7 +16,7 @@
     }
 }
 
-@media only screen and ( max-width: $size_lpt ){
+@media only screen and ( max-width: nth(nth($sizes, 3), 2) ){
     .header{
         &__sygnet{
             width: 50%;
@@ -25,7 +25,7 @@
     }
 }
 
-@media only screen and ( max-width: $size_tbl ){
+@media only screen and ( max-width: nth(nth($sizes, 2), 2) ){
     .header{
         display: none;
     }
