--- a/src/sass/components/block/_block-hero.scss
+++ b/src/sass/components/block/_block-hero.scss
@@ -11,14 +11,14 @@
     }
 } 
 
-@media only screen and ( max-width: $size_tbl ){
+@media only screen and ( max-width: nth(nth($sizes, 2), 2) ){
     .block-hero{
         padding-top: 128px;
         padding-bottom: 256px;
     }
 }
 
-@media only screen and ( max-width: $size_mbl ){
+@media only screen and ( max-width: nth(nth($sizes, 1), 2) ){
     .block-hero{
         padding-top: 64px;
         padding-bottom: 96px;
