--- a/src/sass/components/burger/_burger.scss
+++ b/src/sass/components/burger/_burger.scss
@@ -15,7 +15,7 @@
     }
 }
 
-@media only screen and ( max-width: $size_tbl ){
+@media only screen and ( max-width: nth(nth($sizes, 2), 2) ){
     .burger{
         display: block;
     }
