--- a/src/sass/components/buttons/_button-operative.scss
+++ b/src/sass/components/buttons/_button-operative.scss
@@ -8,7 +8,7 @@
     color: $mainv1;
 }
 
-@media only screen and ( max-width: $size_tbl ){
+@media only screen and ( max-width: nth(nth($sizes, 2), 2) ){
     .button-operative{
         padding-top: 8px;
         padding-right: 16px;
