--- a/src/sass/components/cards/_card-product.scss
+++ b/src/sass/components/cards/_card-product.scss
@@ -32,7 +32,7 @@
     }
 }
 
-@media only screen and ( max-width: $size_tbl ){
+@media only screen and ( max-width: nth(nth($sizes, 2), 2) ){
     .card-product{
         background: $operative;
         &__describe{
