--- a/src/sass/components/cookies/_cookies.scss
+++ b/src/sass/components/cookies/_cookies.scss
@@ -22,7 +22,7 @@
 }
 
 
-@media only screen and ( max-width: $size_tbl ){
+@media only screen and ( max-width: nth(nth($sizes, 2), 2) ){
     .cookies{
         &__describe{
             margin-top: 16px;
