--- a/src/sass/components/navigation/_navigation-aside.scss
+++ b/src/sass/components/navigation/_navigation-aside.scss
@@ -16,7 +16,7 @@
     }
 }
 
-@media only screen and ( max-width: $size_tbl ){
+@media only screen and ( max-width: nth(nth($sizes, 2), 2) ){
     .navigation-aside{
         display: none;
     }
