--- a/src/sass/grid/_columns.scss
+++ b/src/sass/grid/_columns.scss
@@ -1,52 +1,33 @@
 .col-mbl-1, .col-mbl-2, .col-mbl-3, .col-mbl-4, .col-mbl-5, .col-mbl-6, .col-mbl-7, .col-mbl-8, .col-mbl-9, .col-mbl-10, .col-mbl-11, .col-mbl-12,
 .col-tbl-1, .col-tbl-2, .col-tbl-3, .col-tbl-4, .col-tbl-5, .col-tbl-6, .col-tbl-7, .col-tbl-8, .col-tbl-9, .col-tbl-10, .col-tbl-11, .col-tbl-12,
 .col-lpt-1, .col-lpt-2, .col-lpt-3, .col-lpt-4, .col-lpt-5, .col-lpt-6, .col-lpt-7, .col-lpt-8, .col-lpt-9, .col-lpt-10, .col-lpt-11, .col-lpt-12,
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12{
+.col-pc-1, .col-pc-2, .col-pc-3, .col-pc-4, .col-pc-5, .col-pc-6, .col-pc-7, .col-pc-8, .col-pc-9, .col-pc-10, .col-pc-11, .col-pc-12{
     box-sizing: border-box;
     position: relative;
     width: 100%;
-    padding-right: $gap;
-    padding-left: $gap;
+    padding-right: $gutter;
+    padding-left: $gutter;
 }
 
-@each $name in $columns {
-    @if $name == 'mbl'{
-        /* : Column for Mobile : */
-        @for $i from 1 through 13{
+@each $name, $size in $sizes {
+    @if ( $name == 'mbl' ){
+        @for $i from 1 to 13{
             .col-#{$name}-#{$i}{
-                @include column_generator($i);
+                flex: 0 0 $i / 12 * 100%;
+                width: $i / 12 * 100%;
             }
         }
     }
-    @else if $name == 'tbl'{
-        @media only screen and ( min-width: 768px ){
-            /* : Column for Tablet : */
-            @for $i from 1 through 13{
+    @else{
+        @media only screen and ( min-width: $size ){
+            @for $i from 1 to 13{
                 .col-#{$name}-#{$i}{
-                    @include column_generator($i);
-                }
-            }
-        } 
-    }
-    @else if $name == 'lpt'{
-        @media only screen and ( min-width: 1366px ){
-            /* : Column for Laptop : */
-            @for $i from 1 through 13{
-                .col-#{$name}-#{$i}{
-                    @include column_generator($i);
-                }
-            }
-        }
-    }
-    @else {
-        @media only screen and ( min-width: 1600px ){
-            /* : Column for Desktop : */
-            @for $i from 1 through 13{
-                .col-#{$i}{
-                    @include column_generator($i);
+                    flex: 0 0 $i / 12 * 100%;
+                    width: $i / 12 * 100%;
                 }
             }
         }
     }
 }
 
+ 
