--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+/* : Gutter : */
+
 /* : Query sizes : */
 
 /* : Colors : */
@@ -289,84 +291,84 @@ h5,
   -webkit-box-flex: 0;
   -ms-flex: 0 0 8.33333%;
   flex: 0 0 8.33333%;
-  width: 8.33333%;
+  max-width: 8.33333%;
 }
 
 .col-mbl-2 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 16.66667%;
   flex: 0 0 16.66667%;
-  width: 16.66667%;
+  max-width: 16.66667%;
 }
 
 .col-mbl-3 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 25%;
   flex: 0 0 25%;
-  width: 25%;
+  max-width: 25%;
 }
 
 .col-mbl-4 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 33.33333%;
   flex: 0 0 33.33333%;
-  width: 33.33333%;
+  max-width: 33.33333%;
 }
 
 .col-mbl-5 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 41.66667%;
   flex: 0 0 41.66667%;
-  width: 41.66667%;
+  max-width: 41.66667%;
 }
 
 .col-mbl-6 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 50%;
   flex: 0 0 50%;
-  width: 50%;
+  max-width: 50%;
 }
 
 .col-mbl-7 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 58.33333%;
   flex: 0 0 58.33333%;
-  width: 58.33333%;
+  max-width: 58.33333%;
 }
 
 .col-mbl-8 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 66.66667%;
   flex: 0 0 66.66667%;
-  width: 66.66667%;
+  max-width: 66.66667%;
 }
 
 .col-mbl-9 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 75%;
   flex: 0 0 75%;
-  width: 75%;
+  max-width: 75%;
 }
 
 .col-mbl-10 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 83.33333%;
   flex: 0 0 83.33333%;
-  width: 83.33333%;
+  max-width: 83.33333%;
 }
 
 .col-mbl-11 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 91.66667%;
   flex: 0 0 91.66667%;
-  width: 91.66667%;
+  max-width: 91.66667%;
 }
 
 .col-mbl-12 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 100%;
   flex: 0 0 100%;
-  width: 100%;
+  max-width: 100%;
 }
 
 /* : Column for Mobile : */
@@ -1156,84 +1158,84 @@ h5,
     -webkit-box-flex: 0;
     -ms-flex: 0 0 8.33333%;
     flex: 0 0 8.33333%;
-    width: 8.33333%;
+    max-width: 8.33333%;
   }
 
   .col-tbl-2 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 16.66667%;
     flex: 0 0 16.66667%;
-    width: 16.66667%;
+    max-width: 16.66667%;
   }
 
   .col-tbl-3 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%;
-    width: 25%;
+    max-width: 25%;
   }
 
   .col-tbl-4 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.33333%;
     flex: 0 0 33.33333%;
-    width: 33.33333%;
+    max-width: 33.33333%;
   }
 
   .col-tbl-5 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 41.66667%;
     flex: 0 0 41.66667%;
-    width: 41.66667%;
+    max-width: 41.66667%;
   }
 
   .col-tbl-6 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
-    width: 50%;
+    max-width: 50%;
   }
 
   .col-tbl-7 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 58.33333%;
     flex: 0 0 58.33333%;
-    width: 58.33333%;
+    max-width: 58.33333%;
   }
 
   .col-tbl-8 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 66.66667%;
     flex: 0 0 66.66667%;
-    width: 66.66667%;
+    max-width: 66.66667%;
   }
 
   .col-tbl-9 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%;
-    width: 75%;
+    max-width: 75%;
   }
 
   .col-tbl-10 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 83.33333%;
     flex: 0 0 83.33333%;
-    width: 83.33333%;
+    max-width: 83.33333%;
   }
 
   .col-tbl-11 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 91.66667%;
     flex: 0 0 91.66667%;
-    width: 91.66667%;
+    max-width: 91.66667%;
   }
 
   .col-tbl-12 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
-    width: 100%;
+    max-width: 100%;
   }
 }
 
@@ -1242,84 +1244,84 @@ h5,
     -webkit-box-flex: 0;
     -ms-flex: 0 0 8.33333%;
     flex: 0 0 8.33333%;
-    width: 8.33333%;
+    max-width: 8.33333%;
   }
 
   .col-lpt-2 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 16.66667%;
     flex: 0 0 16.66667%;
-    width: 16.66667%;
+    max-width: 16.66667%;
   }
 
   .col-lpt-3 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%;
-    width: 25%;
+    max-width: 25%;
   }
 
   .col-lpt-4 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.33333%;
     flex: 0 0 33.33333%;
-    width: 33.33333%;
+    max-width: 33.33333%;
   }
 
   .col-lpt-5 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 41.66667%;
     flex: 0 0 41.66667%;
-    width: 41.66667%;
+    max-width: 41.66667%;
   }
 
   .col-lpt-6 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
-    width: 50%;
+    max-width: 50%;
   }
 
   .col-lpt-7 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 58.33333%;
     flex: 0 0 58.33333%;
-    width: 58.33333%;
+    max-width: 58.33333%;
   }
 
   .col-lpt-8 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 66.66667%;
     flex: 0 0 66.66667%;
-    width: 66.66667%;
+    max-width: 66.66667%;
   }
 
   .col-lpt-9 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%;
-    width: 75%;
+    max-width: 75%;
   }
 
   .col-lpt-10 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 83.33333%;
     flex: 0 0 83.33333%;
-    width: 83.33333%;
+    max-width: 83.33333%;
   }
 
   .col-lpt-11 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 91.66667%;
     flex: 0 0 91.66667%;
-    width: 91.66667%;
+    max-width: 91.66667%;
   }
 
   .col-lpt-12 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
-    width: 100%;
+    max-width: 100%;
   }
 }
 
@@ -1328,84 +1330,84 @@ h5,
     -webkit-box-flex: 0;
     -ms-flex: 0 0 8.33333%;
     flex: 0 0 8.33333%;
-    width: 8.33333%;
+    max-width: 8.33333%;
   }
 
   .col-pc-2 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 16.66667%;
     flex: 0 0 16.66667%;
-    width: 16.66667%;
+    max-width: 16.66667%;
   }
 
   .col-pc-3 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%;
-    width: 25%;
+    max-width: 25%;
   }
 
   .col-pc-4 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.33333%;
     flex: 0 0 33.33333%;
-    width: 33.33333%;
+    max-width: 33.33333%;
   }
 
   .col-pc-5 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 41.66667%;
     flex: 0 0 41.66667%;
-    width: 41.66667%;
+    max-width: 41.66667%;
   }
 
   .col-pc-6 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
-    width: 50%;
+    max-width: 50%;
   }
 
   .col-pc-7 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 58.33333%;
     flex: 0 0 58.33333%;
-    width: 58.33333%;
+    max-width: 58.33333%;
   }
 
   .col-pc-8 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 66.66667%;
     flex: 0 0 66.66667%;
-    width: 66.66667%;
+    max-width: 66.66667%;
   }
 
   .col-pc-9 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%;
-    width: 75%;
+    max-width: 75%;
   }
 
   .col-pc-10 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 83.33333%;
     flex: 0 0 83.33333%;
-    width: 83.33333%;
+    max-width: 83.33333%;
   }
 
   .col-pc-11 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 91.66667%;
     flex: 0 0 91.66667%;
-    width: 91.66667%;
+    max-width: 91.66667%;
   }
 
   .col-pc-12 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
-    width: 100%;
+    max-width: 100%;
   }
 
   /* : Column for Desktop : */
